--- a/HYNewNest/Features(主代码)/HomeComponent/View/CNUserInfoLoginView.xib
+++ b/HYNewNest/Features(主代码)/HomeComponent/View/CNUserInfoLoginView.xib
@@ -31,20 +31,20 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sLZ-3h-qrV">
                     <rect key="frame" x="0.0" y="0.0" width="404" height="86"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="000.00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oAS-o1-hZh">
-                            <rect key="frame" x="87" y="39" width="63.5" height="28"/>
-                            <fontDescription key="fontDescription" name="DINAlternate-Bold" family="DIN Alternate" pointSize="24"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="000.00" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oAS-o1-hZh">
+                            <rect key="frame" x="77" y="40" width="58.5" height="26"/>
+                            <fontDescription key="fontDescription" name="DINAlternate-Bold" family="DIN Alternate" pointSize="22"/>
                             <color key="textColor" white="1" alpha="0.80000000000000004" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="USDT" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="otD-ws-LfD">
-                            <rect key="frame" x="160.5" y="49" width="32.5" height="14.5"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="251" text="USDT" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="otD-ws-LfD">
+                            <rect key="frame" x="145.5" y="49" width="32.5" height="14.5"/>
                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                             <color key="textColor" white="1" alpha="0.80000000000000004" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tb7-qs-Zp1">
-                            <rect key="frame" x="308" y="43" width="66" height="20"/>
+                        <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tb7-qs-Zp1">
+                            <rect key="frame" x="318" y="43" width="66" height="20"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="20" id="ERW-bH-LXt"/>
                                 <constraint firstAttribute="width" constant="66" id="qeQ-fu-GZH"/>
@@ -56,14 +56,14 @@
                             </connections>
                         </button>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon" translatesAutoresizingMaskIntoConstraints="NO" id="UML-xs-Jw0">
-                            <rect key="frame" x="30" y="32" width="42" height="42"/>
+                            <rect key="frame" x="20" y="32" width="42" height="42"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="42" id="Ngk-Ia-fUh"/>
                                 <constraint firstAttribute="height" constant="42" id="aTZ-pE-Vbf"/>
                             </constraints>
                         </imageView>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="vip1" translatesAutoresizingMaskIntoConstraints="NO" id="e1n-OH-5Tm">
-                            <rect key="frame" x="332" y="44" width="42" height="18"/>
+                            <rect key="frame" x="342" y="44" width="42" height="18"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="42" id="Glo-nW-mGn"/>
                                 <constraint firstAttribute="height" constant="18" id="pJb-7G-oQu"/>
@@ -75,13 +75,13 @@
                         <constraint firstItem="oAS-o1-hZh" firstAttribute="leading" secondItem="UML-xs-Jw0" secondAttribute="trailing" constant="15" id="3C5-MN-txA"/>
                         <constraint firstItem="tb7-qs-Zp1" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="otD-ws-LfD" secondAttribute="trailing" constant="5" id="7UT-6W-9TO"/>
                         <constraint firstItem="otD-ws-LfD" firstAttribute="centerY" secondItem="oAS-o1-hZh" secondAttribute="centerY" constant="3" id="7jH-qS-Ljq"/>
-                        <constraint firstItem="UML-xs-Jw0" firstAttribute="leading" secondItem="sLZ-3h-qrV" secondAttribute="leading" constant="30" id="HjJ-HP-e44"/>
+                        <constraint firstItem="UML-xs-Jw0" firstAttribute="leading" secondItem="sLZ-3h-qrV" secondAttribute="leading" constant="20" id="HjJ-HP-e44"/>
                         <constraint firstItem="UML-xs-Jw0" firstAttribute="centerY" secondItem="tb7-qs-Zp1" secondAttribute="centerY" id="TSr-SN-ECt"/>
                         <constraint firstItem="e1n-OH-5Tm" firstAttribute="centerY" secondItem="tb7-qs-Zp1" secondAttribute="centerY" id="Ybe-5V-2Tu"/>
                         <constraint firstItem="e1n-OH-5Tm" firstAttribute="trailing" secondItem="tb7-qs-Zp1" secondAttribute="trailing" id="ZvT-DX-a8j"/>
                         <constraint firstItem="oAS-o1-hZh" firstAttribute="centerY" secondItem="UML-xs-Jw0" secondAttribute="centerY" id="jTN-Md-XB3"/>
                         <constraint firstAttribute="bottom" secondItem="tb7-qs-Zp1" secondAttribute="bottom" constant="23" id="jtX-Ps-izu"/>
-                        <constraint firstAttribute="trailing" secondItem="tb7-qs-Zp1" secondAttribute="trailing" constant="30" id="lHE-zK-2HW"/>
+                        <constraint firstAttribute="trailing" secondItem="tb7-qs-Zp1" secondAttribute="trailing" constant="20" id="lHE-zK-2HW"/>
                         <constraint firstItem="otD-ws-LfD" firstAttribute="leading" secondItem="oAS-o1-hZh" secondAttribute="trailing" constant="10" id="tPn-WL-mX0"/>
                     </constraints>
                 </view>
@@ -264,7 +264,7 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" id="bWe-Js-K1F">
-                    <rect key="frame" x="0.0" y="0.0" width="404" height="130"/>
+                    <rect key="frame" x="0.0" y="130" width="404" height="130"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="TopLeft" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Shape" translatesAutoresizingMaskIntoConstraints="NO" id="Sim-dp-tCw">
