--- a/HYNewNest/Features(主代码)/NewbieMissionComponent/Controller/BYNewbieAlertVC.xib
+++ b/HYNewNest/Features(主代码)/NewbieMissionComponent/Controller/BYNewbieAlertVC.xib
@@ -27,10 +27,10 @@
                     <rect key="frame" x="15" y="291" width="384" height="314"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pVi-92-z8t" customClass="BYGradientView">
-                            <rect key="frame" x="10" y="0.0" width="364" height="40"/>
+                            <rect key="frame" x="25" y="0.0" width="334" height="40"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="领取礼金" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yj4-wI-vCc">
-                                    <rect key="frame" x="142" y="8.5" width="80" height="28"/>
+                                    <rect key="frame" x="127" y="8.5" width="80" height="28"/>
                                     <fontDescription key="fontDescription" name="PingFangSC-Semibold" family="PingFang SC" pointSize="20"/>
                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <nil key="highlightedColor"/>
@@ -59,13 +59,13 @@
                             </userDefinedRuntimeAttributes>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QiD-6z-aYk" customClass="BYGradientView">
-                            <rect key="frame" x="0.0" y="40" width="384" height="217"/>
+                            <rect key="frame" x="15" y="40" width="354" height="217"/>
                             <subviews>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sb" translatesAutoresizingMaskIntoConstraints="NO" id="c5k-UA-aMM">
-                                    <rect key="frame" x="151.5" y="26" width="81" height="66"/>
+                                    <rect key="frame" x="136.5" y="26" width="81" height="66"/>
                                 </imageView>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ogC-nl-JiW">
-                                    <rect key="frame" x="96" y="98" width="192" height="34"/>
+                                    <rect key="frame" x="81" y="98" width="192" height="34"/>
                                     <string key="text">由于我们检测到您还未满足领取条件
 请选择存款或者投注</string>
                                     <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="12"/>
@@ -73,7 +73,7 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rPl-4f-k0z" customClass="BYGradientButton">
-                                    <rect key="frame" x="17.5" y="145" width="169.5" height="48"/>
+                                    <rect key="frame" x="17.5" y="145" width="154.5" height="48"/>
                                     <color key="backgroundColor" systemColor="systemPinkColor"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="48" id="She-62-XlB"/>
@@ -96,7 +96,7 @@
                                     </connections>
                                 </button>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wD5-3L-J6K" customClass="BYGradientButton">
-                                    <rect key="frame" x="197" y="145" width="169.5" height="48"/>
+                                    <rect key="frame" x="182" y="145" width="154.5" height="48"/>
                                     <color key="backgroundColor" red="0.74117647060000003" green="0.0" blue="0.35294117650000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="48" id="aQB-Ny-f5p"/>
@@ -119,7 +119,7 @@
                                     </connections>
                                 </button>
                                 <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pM2-hz-18x" customClass="BYGradientButton">
-                                    <rect key="frame" x="97" y="144.5" width="190" height="48"/>
+                                    <rect key="frame" x="97" y="144.5" width="160" height="48"/>
                                     <color key="backgroundColor" red="0.74117647060000003" green="0.0" blue="0.35294117650000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="48" id="pfz-Pt-vS5"/>
@@ -188,10 +188,10 @@
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstItem="QiD-6z-aYk" firstAttribute="leading" secondItem="m3m-JA-L2j" secondAttribute="leading" id="3DT-gF-Cjn"/>
-                        <constraint firstItem="pVi-92-z8t" firstAttribute="leading" secondItem="m3m-JA-L2j" secondAttribute="leading" constant="10" id="3cj-0l-1mK"/>
-                        <constraint firstAttribute="trailing" secondItem="pVi-92-z8t" secondAttribute="trailing" constant="10" id="Ghv-E5-Je5"/>
-                        <constraint firstAttribute="trailing" secondItem="QiD-6z-aYk" secondAttribute="trailing" id="LTc-re-RH5"/>
+                        <constraint firstItem="QiD-6z-aYk" firstAttribute="leading" secondItem="m3m-JA-L2j" secondAttribute="leading" constant="15" id="3DT-gF-Cjn"/>
+                        <constraint firstItem="pVi-92-z8t" firstAttribute="leading" secondItem="m3m-JA-L2j" secondAttribute="leading" constant="25" id="3cj-0l-1mK"/>
+                        <constraint firstAttribute="trailing" secondItem="pVi-92-z8t" secondAttribute="trailing" constant="25" id="Ghv-E5-Je5"/>
+                        <constraint firstAttribute="trailing" secondItem="QiD-6z-aYk" secondAttribute="trailing" constant="15" id="LTc-re-RH5"/>
                         <constraint firstItem="pVi-92-z8t" firstAttribute="top" secondItem="m3m-JA-L2j" secondAttribute="top" id="X0b-R1-ily"/>
                         <constraint firstItem="XnP-8J-39z" firstAttribute="top" secondItem="QiD-6z-aYk" secondAttribute="bottom" constant="10" id="Y4K-hK-58X"/>
                         <constraint firstAttribute="height" constant="314" id="mCf-LA-ooV"/>
